--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setup Complete\n"
+     ]
+    }
+   ],
    "source": [
     "# Importing dependencies\n",
     "\n",
@@ -41,12 +49,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"1_Exercise1\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:#33cc33\">Correct</span>"
+      ],
+      "text/plain": [
+       "Correct"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def question_1():\n",
-    "    raise NotImplementedError\n",
+    "    return np.arange(5,905,10)\n",
     "\n",
     "q1_sol = question_1()\n",
     "q1.check()"
@@ -61,12 +92,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"2_Exercise2\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:#33cc33\">Correct</span>"
+      ],
+      "text/plain": [
+       "Correct"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def question_2():\n",
-    "    raise NotImplementedError\n",
+    "    return np.array(list(range(5, 905, 10)))\n",
     "\n",
     "\n",
     "q2_sol = question_2()\n",
@@ -82,12 +136,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"3_Exercise3\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:#33cc33\">Correct</span>"
+      ],
+      "text/plain": [
+       "Correct"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "import string \n",
     "def question_3():\n",
-    "    raise NotImplementedError\n",
+    "    return np.array(list(string.ascii_uppercase))\n",
     "\n",
     "\n",
     "q3_sol = question_3()\n",
@@ -103,13 +181,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"4_Exercise4\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:#33cc33\">Correct</span>"
+      ],
+      "text/plain": [
+       "Correct"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "def question_4() -> tuple:\n",
-    "    # Expected: return (sol1, sol2)\n",
-    "    raise NotImplementedError\n",
+    "def question_4():\n",
+    "    sol1 = np.zeros(10)\n",
+    "    sol2 = np.ones(6)\n",
+    "    return (sol1, sol2)\n",
     "\n",
     "q4_sol_1, q4_sol_2 = question_4()\n",
     "q4.check()"
@@ -126,14 +228,37 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"5_Exercise5\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:#33cc33\">Correct</span>"
+      ],
+      "text/plain": [
+       "Correct"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "input = np.array([[11, 22, 33], [44, 55, 66], [77, 88, 99]])\n",
     "\n",
     "\n",
     "def question_5(input):\n",
-    "    raise NotImplementedError\n",
-    "\n",
+    "    return input[: , 2]\n",
+    "#array[start_row:end_row:step, start_col:end_col:step]\n",
     "\n",
     "q5_sol = question_5(input)\n",
     "q5.check()"
@@ -150,11 +275,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"6_Exercise6\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:#33cc33\">Correct</span>"
+      ],
+      "text/plain": [
+       "Correct"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def question_6():\n",
-    "    raise NotImplementedError\n",
-    "\n",
+    "    return np.zeros((3, 4), dtype=np.int64)\n",
     "\n",
     "q6_sol = question_6()\n",
     "q6.check()"
@@ -169,18 +316,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"7_Exercise7\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:#33cc33\">Correct</span>"
+      ],
+      "text/plain": [
+       "Correct"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "input = np.arange(7, 34, 1).reshape(9, 3)\n",
-    "\n",
-    "\n",
-    "\n",
     "def question_7(input):\n",
-    "    # Expected: return (q7_sol_1, q7_sol_2, q7_sol_3)\n",
-    "    raise NotImplementedError\n",
-    "\n",
+    "    #q7_sol_1, q7_sol_2, q7_sol_3 = np.split(input,3)\n",
+    "    return list(np.split(input, 3))  #(q7_sol_1, q7_sol_2, q7_sol_3)\n",
     "\n",
     "q7_sol_1, q7_sol_2, q7_sol_3 = question_7(input)\n",
     "q7.check()"
@@ -190,20 +356,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Q8**: Return the last 2 elements by each of the first rows of the (3,4) array. "
+    "## **Q8**: Return the last 2 elements by each of the first two rows of the (3,4) array. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"8_Exercise8\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:#33cc33\">Correct</span>"
+      ],
+      "text/plain": [
+       "Correct"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "input = np.arange(1, 13, 1).reshape(3, 4)\n",
     "\n",
     "\n",
     "def question_8(input):\n",
-    "    raise NotImplementedError\n",
+    "    return input[:2, -2:]  # Select first two rows and last two columns , see the general form in exercies 5\n",
+    "    \n",
     "\n",
     "\n",
     "q8_sol = question_8(input)\n",
@@ -221,12 +411,43 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"9_Exercise9\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:#33cc33\">Correct</span>"
+      ],
+      "text/plain": [
+       "Correct"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "input = np.arange(1, 13, 1).reshape(3, 4)\n",
     "\n",
     "\n",
     "def question_9(input):\n",
+    "    return np.sum(input > 5)\n",
     "    raise NotImplementedError\n",
     "\n",
     "\n",
@@ -243,19 +464,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[34 37 33]\n",
+      " [82 37 32]\n",
+      " [59 37 10]]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"10_Exercise10\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:#33cc33\">Correct</span>"
+      ],
+      "text/plain": [
+       "Correct"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "input = np.array([[34, 72, 33], [82, 22, 32], [59, 84, 10]])\n",
     "insert_data = np.array([[37, 37, 37]])\n",
     "\n",
     "\n",
     "def question_10(input, insert_data):\n",
-    "    raise NotImplementedError\n",
+    "    input = np.delete(input, 1, axis=1)  # Delete the second column (index 1)\n",
+    "    return np.insert(input, 1, insert_data, axis=1)# Insert new column at index 1\n",
     "\n",
+    "# In NumPy, the axis parameter is used to specify the dimension along which an operation should be performed.\n",
+    "# axis=0 refers to rows (vertical direction).\n",
+    "# axis=1 refers to columns (horizontal direction).\n",
     "\n",
     "q10_sol = question_10(input, insert_data)\n",
+    "print(q10_sol)\n",
     "q10.check()"
    ]
   },
@@ -272,15 +530,50 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.          2.          5.        ]\n",
+      " [ 4.          6.          3.60555128]\n",
+      " [ 7.          8.          3.60555128]\n",
+      " [10.         10.          0.        ]]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"11_Exercise11\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:#33cc33\">Correct</span>"
+      ],
+      "text/plain": [
+       "Correct"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "input = np.array([[1, 2], [4, 6], [7, 8], [10, 10]])\n",
     "\n",
-    "\n",
     "def question_11(input):\n",
-    "    raise NotImplementedError\n",
-    "\n",
+    "    diffs = np.diff(input, axis=0)\n",
+    "    distance = np.sqrt(np.sum(diffs**2, axis=1))\n",
+    "    distance = np.append(distance, 0)  # Pad the missing data with 0 instead of NaN\n",
+    "    return np.column_stack((input, distance))\n",
     "q11_sol = question_11(input)\n",
+    "print (q11_sol)\n",
     "q11.check()"
    ]
   },
@@ -293,18 +586,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 1]\n",
+      " [2 1]\n",
+      " [3 3]\n",
+      " [2 1]\n",
+      " [1 1]]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"12_Exercise12\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:#33cc33\">Correct</span>"
+      ],
+      "text/plain": [
+       "Correct"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "input = np.array([[1, 1], [2, 1], [3, 3], [3, 3], [2, 1], [1, 1]])\n",
     "\n",
     "\n",
     "def question_12(input):\n",
-    "    raise NotImplementedError\n",
+    "    # Keep the first occurrence and elements where the difference is nonzero\n",
+    "    mask = np.insert(np.any(input[1:] != input[:-1], axis=1), 0, True)\n",
+    "    return input[mask]\n",
     "\n",
     "\n",
     "q12_sol = question_12(input)\n",
+    "print(q12_sol)\n",
     "q12.check()"
    ]
   },
@@ -318,15 +648,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "parent.postMessage({\"jupyterEvent\": \"custom.exercise_interaction\", \"data\": {\"outcomeType\": 1, \"valueTowardsCompletion\": 0.05, \"interactionType\": 1, \"questionType\": 1, \"questionId\": \"13_Exercise13\", \"failureMessage\": \"\", \"exceptionClass\": \"\", \"trace\": \"\"}}, \"*\")",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "<span style=\"color:#33cc33\">Correct</span>"
+      ],
+      "text/plain": [
+       "Correct"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "input = np.array([[10, 20, 30], [15, 24, 33], [8, 18, 29], [14, 22, 32]])\n",
     "\n",
     "\n",
     "def question_13(input):\n",
-    "    raise NotImplementedError\n",
+    "    mean = np.mean(input, axis=0)  # Compute mean for each column\n",
+    "    std = np.std(input, axis=0)    # Compute standard deviation for each column\n",
+    "    \n",
+    "    # Avoid division by zero: replace zeros in std with 1\n",
+    "    std[std == 0] = 1\n",
+    "    normalized_arr = (input - mean) / std  # Normalize\n",
+    "    return normalized_arr\n",
+    "\n",
     "\n",
     "\n",
     "q13_sol = question_13(input)\n",
@@ -553,7 +913,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "crohme",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -567,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
