--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -710,7 +710,7 @@
     "\n",
     "\n",
     "def question_14(input):\n",
-    "    raise NotImplementedError\n",
+    "    return input\n",
     "\n",
     "\n",
     "q14_sol = question_14(input)\n",
@@ -735,7 +735,7 @@
     "\n",
     "\n",
     "def question_15(input):\n",
-    "    raise NotImplementedError\n",
+    "    return input\n",
     "\n",
     "\n",
     "q15_sol = question_15(input)\n",
@@ -784,7 +784,7 @@
     "\n",
     "\n",
     "def question_17(input):\n",
-    "    raise NotImplementedError\n",
+    "    return input\n",
     "\n",
     "\n",
     "q17_sol = question_17(input)\n",
@@ -820,7 +820,7 @@
     "\n",
     "\n",
     "def question_18(input, labels):\n",
-    "    raise NotImplementedError\n",
+    "    return input\n",
     "\n",
     "\n",
     "q18_sol = question_18(input, labels)\n",
@@ -845,7 +845,7 @@
     "\n",
     "\n",
     "def question_19(input):\n",
-    "    raise NotImplementedError\n",
+    "    return input\n",
     "\n",
     "\n",
     "q19_sol = question_19(input)\n",
@@ -896,7 +896,7 @@
     "\n",
     "\n",
     "def question_20(input):\n",
-    "    raise NotImplementedError\n",
+    "    return input\n",
     "\n",
     "\n",
     "q20_sol = question_20(input)\n",
