--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -448,7 +448,6 @@
     "\n",
     "def question_9(input):\n",
     "    return np.sum(input > 5)\n",
-    "    raise NotImplementedError\n",
     "\n",
     "\n",
     "q9_sol = question_9(input)\n",
@@ -759,7 +758,7 @@
     "\n",
     "\n",
     "def question_16(input):\n",
-    "    raise NotImplementedError\n",
+    "    return input\n",
     "\n",
     "\n",
     "q16_sol = question_16(input)\n",
